; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/libertas/extr_cmd.c_lbs_cmd_copyback.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/libertas/extr_cmd.c_lbs_cmd_copyback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.lbs_private = type { i32 }
%struct.cmd_header = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @lbs_cmd_copyback(%struct.lbs_private* %0, i64 %1, %struct.cmd_header* %2) #0 {
  %4 = alloca %struct.lbs_private*, align 8
  %5 = alloca i64, align 8
  %6 = alloca %struct.cmd_header*, align 8
  %7 = alloca %struct.cmd_header*, align 8
  %8 = alloca i32, align 4
  store %struct.lbs_private* %0, %struct.lbs_private** %4, align 8
  store i64 %1, i64* %5, align 8
  store %struct.cmd_header* %2, %struct.cmd_header** %6, align 8
  %9 = load i64, i64* %5, align 8
  %10 = inttoptr i64 %9 to i8*
  %11 = bitcast i8* %10 to %struct.cmd_header*
  store %struct.cmd_header* %11, %struct.cmd_header** %7, align 8
  %12 = load %struct.cmd_header*, %struct.cmd_header** %7, align 8
  %13 = getelementptr inbounds %struct.cmd_header, %struct.cmd_header* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = call i32 @le16_to_cpu(i32 %14)
  %16 = load %struct.cmd_header*, %struct.cmd_header** %6, align 8
  %17 = getelementptr inbounds %struct.cmd_header, %struct.cmd_header* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = call i32 @le16_to_cpu(i32 %18)
  %20 = call i32 @min(i32 %15, i32 %19)
  store i32 %20, i32* %8, align 4
  %21 = load %struct.cmd_header*, %struct.cmd_header** %7, align 8
  %22 = load %struct.cmd_header*, %struct.cmd_header** %6, align 8
  %23 = load i32, i32* %8, align 4
  %24 = call i32 @memcpy(%struct.cmd_header* %21, %struct.cmd_header* %22, i32 %23)
  ret i32 0
}

declare dso_local i32 @min(i32, i32) #1

declare dso_local i32 @le16_to_cpu(i32) #1

declare dso_local i32 @memcpy(%struct.cmd_header*, %struct.cmd_header*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
